--- a/MusicPlayer/web/css/bootstrap.css
+++ b/MusicPlayer/web/css/bootstrap.css
@@ -2346,14 +2346,14 @@ table th[class*="col-"] {
 .table > thead > tr.active > th,
 .table > tbody > tr.active > th,
 .table > tfoot > tr.active > th {
-  background-color: #f5f5f5;
+  background-color: #f2dede;
 }
 .table-hover > tbody > tr > td.active:hover,
 .table-hover > tbody > tr > th.active:hover,
 .table-hover > tbody > tr.active:hover > td,
 .table-hover > tbody > tr:hover > .active,
 .table-hover > tbody > tr.active:hover > th {
-  background-color: #e8e8e8;
+  background-color: #f2dede;
 }
 .table > thead > tr > td.success,
 .table > tbody > tr > td.success,
@@ -2367,7 +2367,7 @@ table th[class*="col-"] {
 .table > thead > tr.success > th,
 .table > tbody > tr.success > th,
 .table > tfoot > tr.success > th {
-  background-color: #dff0d8;
+  background-color: #f2dede;
 }
 .table-hover > tbody > tr > td.success:hover,
 .table-hover > tbody > tr > th.success:hover,
@@ -3110,31 +3110,31 @@ fieldset[disabled] .btn-default.focus {
   border-color: #ccc;
 }
 .btn-default .badge {
-  color: #fff;
+  color: #b423d8;
   background-color: #333;
 }
 .btn-primary {
-  color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  color: #b423d8;
+  background-color: #f2dede;
+  border-color: #b423d8;
 }
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #286090;
-  border-color: #122b40;
+  background-color: #7b2890;
+  border-color: #7b2890;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #7b2890;
+  border-color: #7b2890;
 }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #7b2890;
+  border-color: #7b2890;
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
@@ -3146,8 +3146,8 @@ fieldset[disabled] .btn-default.focus {
 .btn-primary.active.focus,
 .open > .dropdown-toggle.btn-primary.focus {
   color: #fff;
-  background-color: #204d74;
-  border-color: #122b40;
+  background-color: #7b2890;
+  border-color: #7b2890;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -3163,12 +3163,12 @@ fieldset[disabled] .btn-primary:focus,
 .btn-primary.disabled.focus,
 .btn-primary[disabled].focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #f2dede;
+  border-color: #b423d8;
 }
 .btn-primary .badge {
-  color: #337ab7;
-  background-color: #fff;
+  color: #471354;
+  background-color: #f2dede;
 }
 .btn-success {
   color: #fff;
@@ -3220,35 +3220,35 @@ fieldset[disabled] .btn-success:focus,
 .btn-success.disabled.focus,
 .btn-success[disabled].focus,
 fieldset[disabled] .btn-success.focus {
-  background-color: #5cb85c;
-  border-color: #4cae4c;
+  background-color: #ddd;
+  border-color: #debfbf;
 }
 .btn-success .badge {
-  color: #5cb85c;
+  color: #debfbf;
   background-color: #fff;
 }
 .btn-info {
-  color: #fff;
-  background-color: #5bc0de;
-  border-color: #46b8da;
+  color: #b423d8;
+  background-color: #f2dede;
+  border-color: #b423d8;
 }
 .btn-info:focus,
 .btn-info.focus {
-  color: #fff;
-  background-color: #31b0d5;
-  border-color: #1b6d85;
+  color: #b423d8;
+  background-color: #f2dede;
+  border-color: #b423d8;
 }
 .btn-info:hover {
-  color: #fff;
-  background-color: #31b0d5;
-  border-color: #269abc;
+  color: #b423d8;
+  background-color: #f2dede;
+  border-color: #b423d8;
 }
 .btn-info:active,
 .btn-info.active,
 .open > .dropdown-toggle.btn-info {
-  color: #fff;
-  background-color: #31b0d5;
-  border-color: #269abc;
+  color: #b423d8;
+  background-color: #f2dede;
+  border-color: #b423d8;
 }
 .btn-info:active:hover,
 .btn-info.active:hover,
@@ -3259,9 +3259,9 @@ fieldset[disabled] .btn-success.focus {
 .btn-info:active.focus,
 .btn-info.active.focus,
 .open > .dropdown-toggle.btn-info.focus {
-  color: #fff;
-  background-color: #269abc;
-  border-color: #1b6d85;
+  color: #b423d8;
+  background-color: #f2dede;
+  border-color: #b423d8;
 }
 .btn-info:active,
 .btn-info.active,
@@ -3277,11 +3277,11 @@ fieldset[disabled] .btn-info:focus,
 .btn-info.disabled.focus,
 .btn-info[disabled].focus,
 fieldset[disabled] .btn-info.focus {
-  background-color: #5bc0de;
-  border-color: #46b8da;
+  background-color: #f2dede;
+  border-color: #b423d8;
 }
 .btn-info .badge {
-  color: #5bc0de;
+  color: #b423d8;
   background-color: #fff;
 }
 .btn-warning {
